# plaid

./: .clang-format  .gitignore  CMakeLists.txt  README-EN.md  README.md
core/: CMakeLists.txt
core/include/: plaid.h
core/include/plaid/: context.h  format.h  frame_buffer.h  mat.h  pipeline.h  render_pass.h  shader.h  transition.h  utility.h  vec.h
core/src/: attachment_transition.cpp  attachment_transition.h  context.cpp  frame_buffer.cpp  graphics_pipeline_cache.h  graphics_pipeline_internal.cpp  graphics_pipeline_internal.h  render_pass.cpp  render_pass_internal.cpp  render_pass_internal.h
gltf/: CMakeLists.txt
gltf/include/: gltf.h
gltf/include/gltf/: accessor.h  asset.h  header.h  parse.h  version.h
gltf/src/: header.cpp  json.h  parse.cpp  trie.h
json/: CMakeLists.txt
json/include/json/: chunked_pool.h  dom.h  except.h  member.h  string_pool.h  value.h
json/src/: chunked_pool.cpp  dom.cpp  member.cpp  string_pool.cpp  value.cpp
viewer/: CMakeLists.txt
viewer/src/: blinn_phong.hpp  camera.cpp  camera.h  main.cpp  obj_model.cpp  obj_model.h  pch.h  triangle.hpp  window.h  window.win32.cpp
viewer/src/data/: gltf.cpp  gltf.h  obj_model.cpp
viewer/src/gltf/: loader.cpp  loader.h  node.cpp  node.h  primitive.h  renderer.h  scene.h  validate.cpp  validate.h
viewer/src/scene/: camera.h  mesh.cpp  mesh.h  node.h  perspective_camera.cpp  perspective_camera.h  scene.cpp  scene.h
